--- a/index.html
+++ b/index.html
@@ -4,15 +4,49 @@
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
     <script src="underbar.js"></script>
+    <script src="moment.js"></script>
+    
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <div class="mynav">
+      <h1>Twittler</h1>
+      <p>By Jake Obron</p>
+    </div>
     <div class='button-nav'>
       <button name="button">Get more tweets</button>
     </div>
     <nav>
       <script>
         $(document).ready(function(){
+
+          function parseTwitterDate(tdate) {
+              var system_date = new Date(Date.parse(tdate));
+              var user_date = new Date();
+              if (K.ie) {
+                  system_date = Date.parse(tdate.replace(/( \+)/, ' UTC$1'))
+              }
+              var diff = Math.floor((user_date - system_date) / 1000);
+              if (diff <= 1) {return "just now";}
+              if (diff < 20) {return diff + " seconds ago";}
+              if (diff < 40) {return "half a minute ago";}
+              if (diff < 60) {return "less than a minute ago";}
+              if (diff <= 90) {return "one minute ago";}
+              if (diff <= 3540) {return Math.round(diff / 60) + " minutes ago";}
+              if (diff <= 5400) {return "1 hour ago";}
+              if (diff <= 86400) {return Math.round(diff / 3600) + " hours ago";}
+              if (diff <= 129600) {return "1 day ago";}
+              if (diff < 604800) {return Math.round(diff / 86400) + " days ago";}
+              if (diff <= 777600) {return "1 week ago";}
+              return "on " + system_date;
+          }
+          var K = function () {
+              var a = navigator.userAgent;
+              return {
+                  ie: a.match(/MSIE\s([^;]*)/)
+              }
+          }();
+
           var $nav = $('nav');
             $('button').on('click', function(){
               $nav.html('');
@@ -22,9 +56,12 @@
                 while(index >= 0){
                   var tweet = streams.home[index];
                   var $tweet = $('<div id="tweet"></div>').addClass(tweet.user);
-                  var $message = '<a class="link" href="#">@'+tweet.user+' </a>'; 
+                  var $message = '<a class="link" href="#">@'+tweet.user+' </a>';
+
                   //google momment.js lib for time 
-                  $tweet.html($message + ': ' + tweet.message + ' ' + tweet.created_at).addClass();
+                  var $time = parseTwitterDate(tweet.created_at);
+
+                  $tweet.html($message + ': ' + tweet.message + ' ' + $time).addClass();
                   
                   $tweet.appendTo($nav);       
                   index -= 1;
@@ -45,7 +82,8 @@
                   console.log("TWEET.USER: " +tweet.user);
                   if(myClass === tweet.user){
                     var $message = '<a class="link" href="#">@'+tweet.user+' </a>'; 
-                    $tweet.html($message + ': ' + tweet.message + ' ' + tweet.created_at).addClass();
+                    var $time = parseTwitterDate(tweet.created_at);
+                    $tweet.html($message + ': ' + tweet.message + ' ' + $time).addClass();
                     $tweet.appendTo($nav);       
                   }
                   index -= 1;
